--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
 
    <section class="info-section">
 
-        <article class="block block1">
-           <div class="block-img"> <span><img class="star" src="/assets/img/star pu.png" alt=""></span>
-            <img src="./assets/The big idea.png" alt="The big idea.png">
+        <article class="block block1  hidden">
+            <div class="block-img"> <span>
+                    <img class="star" src="/assets/img/star pu.png" alt=""></span>
+                <img class="left-hidden" src="./assets/The big idea.png" alt="The big idea.png">
             <span><img class="arrow" src="/assets/img/arrow.png" alt=""></span>
         </div>
 
-            <div class="block_content">
+            <div class="block_content right-hidden">
                 <h1>Introduction to getlinked <br><span>tech Hackathon 1.0</span></h1>
                 <span><img class="star" src="/assets/img/star pu.png" alt=""></span>
                 <p class="block_text">
@@ -95,47 +96,49 @@
         </article>
 
         <article class="block block2">
-
-            <div class="block_content">
+            <div class="block_content left-hidden">
+                <img class="star" src="/assets/img/star-grey.png" alt="">
                 <h1>Rules and <br><span>Guidelines</span></h1>
+        
                 <p class="block_text">
                     Our tech hackathon is a melting pot of visionaries, and its purpose is as clear as day: to shape the future. Whether you're a coding genius, a design maverick, or a concept wizard, you'll have the chance to transform your ideas into reality. Solving real-world problems, pushing the boundaries of technology, and creating solutions that can change the world, that's what we're all about!
                 </p>
             </div>
+            <img src="/assets/img/star.png" alt="">
 
-            <img src="/assets/7450159 1.png" alt="">
+            <img class="right-hidden" src="/assets/7450159 1.png" alt="">
         </article>
 
-        <article class="block block3">
-            <img src="/assets/8046554 1.png" alt="">
+        <article class="block block3 ">
+            <img class="left-hidden" src="/assets/8046554 1.png" alt="">
 
-            <div class="block_content">
+            <div class="block_content right-hidden">
                 <h1>Judging Criteria <br><span>Key attributes</span> </h1>
                 
-                <p class="block_text_item">
+                <p class="block_text_item right-hidden">
                     <span>Innovation and Creativity:</span> Evaluate the uniqueness and creativity of the
                     solution. Consider whether it addresses a real-world problem in a novel 
                     way or introduces innovative features.
 
                 </p>
 
-                <p class="block_text_item">
+                <p class="block_text_item right-hidden">
                    <span> Functionality:</span> Assess how well the solution works. Does it perform its 
                     intended functions effectively and without major issues? Judges would
                     consider the completeness and robustness of the solution.
                 </p>
 
-                <p class="block_text_item">
+                <p class="block_text_item right-hidden">
                     <span>Impact and Relevance:</span> Determine the potential impact of the solution in the real world. Does it address a significant problem, and is it relevant to the target audience? Judges would assess the potential social, economic, or environmental benefits.
                 </p>
 
-                <p class="block_text_item">
+                <p class="block_text_item right-hidden">
                     <span>Technical Complexity:</span> Evaluate the technical sophistication of the solution. 
                     Judges would consider the complexity of the code, the use of advanced 
                     technologies or algorithms, and the scalability of the solution.
                 </p>
 
-                <p class="block_text_item">
+                <p class="block_text_item right-hidden">
                     <span>Adherence to Hackathon Rules:</span> Judges will Ensure that the team adhered to the rules and guidelines of the hackathon, including deadlines, use of specific technologies or APIs, and any other competition-specific requirements.
                 </p>
 
