--- a/index.html
+++ b/index.html
@@ -104,13 +104,17 @@
                     Our tech hackathon is a melting pot of visionaries, and its purpose is as clear as day: to shape the future. Whether you're a coding genius, a design maverick, or a concept wizard, you'll have the chance to transform your ideas into reality. Solving real-world problems, pushing the boundaries of technology, and creating solutions that can change the world, that's what we're all about!
                 </p>
             </div>
-            <img src="/assets/img/star.png" alt="">
+            <img class="white-star" src="/assets/img/star.png" alt="">
 
             <img class="right-hidden" src="/assets/7450159 1.png" alt="">
         </article>
 
         <article class="block block3 ">
-            <img class="left-hidden" src="/assets/8046554 1.png" alt="">
+            <div class="block-img">
+                <img class="star" src="/assets/img/star pu.png" alt="">
+                <img class="block3Img left-hidden" src="/assets/8046554 1.png" alt="">
+            
+            </div>
 
             <div class="block_content right-hidden">
                 <h1>Judging Criteria <br><span>Key attributes</span> </h1>
@@ -142,6 +146,7 @@
                     <span>Adherence to Hackathon Rules:</span> Judges will Ensure that the team adhered to the rules and guidelines of the hackathon, including deadlines, use of specific technologies or APIs, and any other competition-specific requirements.
                 </p>
 
+                    <span><img src="/assets/img/star.png" alt=""></span>
                 <button class="btn">Read More</button>
             </div>
         </article>
@@ -151,6 +156,7 @@
    <section class="faq flex" id="faq">
     
     <aside class="left">
+        <img class="star" src="/assets/img/star pu.png" alt="">
         <h1 class="faq_header">Frequently Ask <br><span>Question</span></h1>
         <p class="sub_heading">We got answers to the questions that you might want to talk about getlinked Hackathon 1.0</p>
 
@@ -165,6 +171,9 @@
     </aside>
 
     <aside class="right">
+        <span>?</span>
+        <span>?</span>
+        <span>?</span>
         <img src="/assets/cwok_casual_21 1.png" alt="">
     </aside>
 
