worked more on the faq section

--- a/index.html
+++ b/index.html
@@ -155,26 +155,41 @@
    <!-- FAQ section -->
    <section class="faq flex" id="faq">
     
-    <aside class="left">
+    <aside class="left left-hidden">
         <img class="star" src="/assets/img/star pu.png" alt="">
-        <h1 class="faq_header">Frequently Ask <br><span>Question</span></h1>
+        <h1 class="faq_header left-hidden">Frequently Ask <br><span>Question</span></h1>
         <p class="sub_heading">We got answers to the questions that you might want to talk about getlinked Hackathon 1.0</p>
 
         <ul class="faq_items">
-            <li><p>Can I work on a project I started before the hackathon?<span></span></p></li>
-            <li><p>What happens if I need help during the hackathon?</p><span></span></li>
-            <li><p>Can I join a team or do i have to come with one?</p><span></span></li>
-            <li><p>What happens after the hackathon ends?</p><span></span></li>
-            <li><p>What happens if I don't have an idea for a project?</p><span></span></li>
-            <li><p>Can I work on a project i started before the hackathon?</p><span></span></li>
+            <li class="left-hidden">
+                <p>Can I work on a project I started before the hackathon?<span></span></p>
+            </li>
+            <li class="left-hidden">
+                <p>What happens if I need help during the hackathon?<span></span></p>
+            </li>
+            <li class="left-hidden">
+                <p>Can I join a team or do i have to come with one?<span></span></p>
+            </li>
+            <li class="left-hidden">
+                <p>What happens after the hackathon ends?<span></span></p>
+            </li>
+            <li class="left-hidden">
+                <p>What happens if I don't have an idea for a project?<span></span></p>
+            </li>
+            <li class="left-hidden">
+                <p>Can I work on a project i started before the hackathon?<span></span></p>
+            </li>
         </ul>
     </aside>
 
-    <aside class="right">
-        <span>?</span>
-        <span>?</span>
-        <span>?</span>
+    <aside class="right right-hidden">
+        <div class="question-marks">
+            <span>?</span>
+            <span>?</span>
+            <span>?</span>
+        </div>
         <img src="/assets/cwok_casual_21 1.png" alt="">
+        <span><img src="./assets/img/star.png" alt=""></span>
     </aside>
 
    </section>
